<resources>
    <string name="app_name">Cattle Body Condition Scoring</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_create_record">New Record</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="set_date">Set date</string>
    <string name="expected_date">Planned calving date</string>
    <string name="set_expected_date">Set expected date</string>
    <string name="create">Create</string>
    <string name="title_activity_scoring">Scores</string>

    <string name="done">Done</string>
    <string name="snack_missing_setting">Please make sure to enter all values.</string>
    <string name="snackbar_missing_name">Please enter a name</string>
    <string name="snackbar_dismiss">Dismiss</string>
    <string name="title_activity_maps">Map</string>
    <string name="pref_locality">Country</string>
    <string name="pref_localities_default">NZ</string>
    <string name="pref_score_scale">Scoring scale</string>
    <string name="settings">Settings</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="zero">0</string>


    <string name="extra_record_id">record_id</string>
    <string name="save">Save</string>
    <string name="title_activity_view_record">View</string>
    <string name="save_chart">Save Chart</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure you want to delete this record?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="permission_denied">The app was not allowed to write to your storage. Hence, it cannot function properly. Please consider granting it this permission</string>
    <string name="save_failed">Save failed</string>
    <string name="save_success">Save successful</string>
    <string name="save_to_drive">Save to Drive</string>
    <string name="error_drive_upload">Error while trying to create new file contents</string>
    <string name="recorded_label">Scored on: %1$s</string>
    <string name="planned_calving_label">Planned start of calving:\n%1$s</string>
    <string name="create_record_prompt">Please add a new record!</string>
    <string name="about">About</string>
    <string name="next_continue">Continue</string>
    <string name="edit_record">Edit Record</string>
    <string name="edit">Edit</string>
    <string name="view">View</string>
    <string name="score">Score</string>
    <string name="count">Count</string>
    <string name="share">Share</string>
    <string name="title_share_record">Share record</string>
</resources>
