<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="6">

    <TextView
        android:id="@+id/scoreText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="2.5" />

    <Button
        android:id="@+id/subtractButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/subtract"
        android:textColor="@android:color/primary_text_light" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/add"
        android:textColor="@android:color/primary_text_light" />

    <TextView
        android:id="@+id/countText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>